parser.ypp
%{
	#include <iostream>
	#include "yystype.h"
	#include "parser_utils.h"
	#include "hw3_output.hpp"
	#include "bp.hpp"
	#include <string>
	// #define YYDEBUG 1
	// #define YYERROR_VERBOSE 1
	#define BUFF CodeBuffer::instance()
	#define NEXT ($$->nextList = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST)))

    using namespace std;
	using namespace output;

    int yylex();
	extern int yylineno;
    void yyerror(char const*);
	typedef std::pair<int, BranchLabelIndex> addrPair;

%}
////////////TODO ASK DANIAL///////////////

/* %union{
	int val;
	string text;
}; */
%nonassoc VOID INT BYTE B BOOL TRUE FALSE
 	   RETURN WHILE BREAK CONTINUE SWITCH DEFAULT COLON SC 
       COMMA LBRACE RBRACE IF CASE HELSE NUM ID STRING
%nonassoc ELSE
%right ASSIGN
%left OR
%left AND
%left EQUAL NEQUAL
%nonassoc LT LTE GT GTE
%left ADD SUB
%left MULT DIV
%right NOT
%left LPAREN RPAREN

%%

Program : /*{dprint("Program");}*/ Funcs 												      /*  { BUFF.bpatch($1->nextList, BUFF.genLabel()); BUFF.emit("ret");}*/
;

Funcs :	/*epsilon*/													        {printProductionRule(2);}
	  | /*{dprint("Funcs");}*/ FuncDecl Funcs 													/*	{$$ = new Exp(""); $$->nextList = BUFF.merge($1->nextList, $2->nextList);}*/
;

FuncDecl : /*{dprint("FuncDecl");}*/ RetType ID LPAREN Formals RPAREN LBRACE {prevDefCheck($2->name); addFunDef($1->name, $2->name, $4->pNames, $4->pTypes);
																			BUFF.emit(std::string("define ") + ($1->name == "VOID" ? "void" : "i32") + " @" + $2->name + getpTypesStr($4->pTypes) + "{"); BUFF.genLabel(); initVarStack(); 
																			} N Statements RBRACE 		{exitScope(); BUFF.bpatch($8->nextList, $9->label); BUFF.bpatch($9->nextList, BUFF.genLabel()); if($9->noRet && $1->name != "VOID") BUFF.emit("ret i32 0"); if($9->noRet && $1->name == "VOID") BUFF.emit("ret void"); BUFF.emit("}"); $$ = $9;}
;

RetType : Type 																{$$ = $1;}
		| VOID 																{$$ = new Type("VOID");}
;

Formals : /*epsilon*/														{$$ = new Type("");}
		| FormalsList 														{$$ = $1;}
;

FormalsList : FormalDecl 													{$$ = $1;}
			| FormalDecl COMMA FormalsList 									{$$ = $3; $$->pNames.push_back($1->pNames[0]); $$->pTypes.push_back($1->pTypes[0]);}
;

FormalDecl : Type ID 														{$$ = new Formals($2->name, $1->name);}
;

Statements : Statment 														{$$ = $1; }
		   | Statements Statment 											{$$ = $1; BUFF.bpatch($1->nextList, $2->label); $$->nextList = $2->nextList;}
;

Statment : LBRACE {enterScope("");} Statements RBRACE 		{exitScope(); $$ = $3;}
		 | M Type ID SC  														{$$ = new Exp(""); prevDefCheck($3->name); addVarToSymTable($2->name, $3->name, 0); initVar($3->name, 0); $$->label = $1->label; $$->nextList = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));}
		 | M Type ID ASSIGN Exp SC  											{$$ = new Exp(""); prevDefCheck($3->name); checkTypeMatch($2->name, $5->type); addVarToSymTable($2->name, $3->name, $5->val); initVar($3->name, getExpVal($5)); $$->label = $1->label; $$->nextList = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));}
		 | M ID ASSIGN Exp SC 												{$$ = new Exp(""); checkTypeMatch(getTypeById($2->name), $4->type);  changeValOfVar($2->name, $4->val); initVar($2->name, getExpVal($4)); $$->label = $1->label; $$->nextList = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));}
		 | M Call SC  															{$$ = $2; $$->label = $1->label; $$->nextList = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));}
		 | M RETURN SC 														{checkRetMatchesFunc(""); BUFF.emit("ret"); $$ = new Exp(""); $$->noRet = false;$$->label = $1->label;}
		 | M RETURN Exp SC 													{checkRetMatchesFunc($3->type); BUFF.emit(std::string("ret i32 ") + ($3->reg == "" ? std::to_string($3->val) : $3->reg)); $$ = new Exp(""); $$->noRet = false;$$->label = $1->label;}
		 | M IF LPAREN Exp M1 RPAREN M2 Statment M3 %prec HELSE 				{BUFF.bpatch($4->trueList, $8->label); $$ = new Exp(""); auto temp = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));
		 																	$$->nextList = BUFF.merge(BUFF.merge($4->falseList, $8->nextList), temp);$$->label = $1->label;}								
		 | M IF LPAREN Exp M1 RPAREN M2 Statment M3 ELSE N M2 Statment M3		{BUFF.bpatch($4->trueList, $8->label);	$$ = new Exp("");
																					BUFF.bpatch($4->falseList, $13->label);
																					std::vector<addrPair> temp = BUFF.merge($8->nextList, $11->nextList); auto temp2 = BUFF.makelist(addrPair(BUFF.emit("br label @"), FIRST));
																					$$->nextList = BUFF.merge(BUFF.merge(temp, $13->nextList), temp2);$$->label = $1->label;}
		 | WHILE M LPAREN Exp M1 RPAREN M4 Statment M3 					{BUFF.bpatch($8->nextList, $2->label); BUFF.bpatch($4->trueList, $8->label);
																					$$ = new Exp(""); $$->nextList = BUFF.merge($4->falseList, $8->breakList); $$->label = $2->label;}	
		 | M BREAK SC 														{checkBreak(); int addr = BUFF.emit("br label @"); $$ = new Exp(""); $$->breakList = BUFF.makelist(addrPair(addr, FIRST));$$->label = $1->label;}
		 | M CONTINUE SC 														{checkContinue(); int addr = BUFF.emit("br label @"); $$ = new Exp(""); $$->nextList = BUFF.makelist(addrPair(addr, FIRST)); $$->label = $1->label;}
		 | SWITCH LPAREN Exp {checkRelop($3, $3);} RPAREN LBRACE {enterScope("SWITCH");} CaseList RBRACE {exitScope();}                 {printProductionRule(26);}
;


Call : ID LPAREN {enterCallLabelScope();} ExpList RPAREN 											{$$ = funCall($1->name, $4->pTypes); doFuncCall($4->pTypes.size(), $1->name); exitCallLabelScope();}
	 | ID LPAREN RPAREN 													{$$ = funCall($1->name, std::vector<std::string>());}
;

ExpList : Exp {$1->pTypes.push_back($1->type); $$ = $1; doParam($1->type, getExpVal($1), $1->trueList, $1->falseList, true); }
		| Exp COMMA {BUFF.bpatch(doParam($1->type, getExpVal($1), $1->trueList, $1->falseList, false), BUFF.genLabel());} ExpList 	{$4->pTypes.push_back($1->type); $$ = $4;}
;



Type : INT 																	{$$ = new Type("INT");}
	 | BYTE 																{$$ = new Type("BYTE");}
     | BOOL 																{$$ = new Type("BOOL");}
;


Exp : LPAREN Exp RPAREN 													{$$ = $2;}
    | Exp ADD Exp 														{$$ = doBinop($1, $3, "add");}
    | Exp SUB Exp 														{$$ = doBinop($1, $3, "sub");}
    | Exp MULT Exp 														{$$ = doBinop($1, $3, "mul");}
    | Exp DIV Exp 														{$$ = doBinop($1, $3, "sdiv");}
	| ID 																	{$$ = getById($1); int addr; if($$->type == "BOOL") addr = doRelop(getExpVal($$), "1", "eq"); 
																			$$->trueList = BUFF.makelist(addrPair(addr, FIRST)); $$->falseList = BUFF.makelist(addrPair(addr, SECOND));}
	| Call 																	{$$ = $1;}
	| NUM 																	{$$ = $1;}
	| NUM B 																{checkByte($1->val); $$ = $1; $$->type = "BYTE";}
	| STRING 																{$$ = $1;}
	| TRUE 																	{$$ = $1; $$->trueList = doList();}
	| FALSE 																{$$ = $1; $$->falseList = doList();}
	| NOT Exp 																{checkNot($2); $$ = $2; $$->trueList = $2->falseList; $$->falseList = $2->trueList;}
	| Exp AND M Exp 			{$$ = new Exp("BOOL"); checkBool($1,$4);  BUFF.bpatch($1->trueList, $3->label);
																									$$->trueList = $4->trueList;
																									$$->falseList = BUFF.merge($1->falseList, $4->falseList);}
	| Exp OR M Exp 			{$$ = new Exp("BOOL");checkBool($1,$4);  BUFF.bpatch($1->falseList, $3->label);
																									$$->trueList = BUFF.merge($1->trueList, $4->trueList);
																									$$->falseList = $4->falseList;}
	| Exp LT Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "slt");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
	| Exp LTE Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "sle");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
	| Exp GT Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "sgt");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
	| Exp GTE Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "sge");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
	| Exp EQUAL Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "eq");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
	| Exp NEQUAL Exp 												    	{checkRelop($1, $3); $$ = new Exp("BOOL"); int addr = doRelop(getExpVal($1), getExpVal($3), "ne");
																									$$->trueList = BUFF.makelist(addrPair(addr, FIRST));
																									$$->falseList = BUFF.makelist(addrPair(addr, SECOND)); }
;

CaseList : CaseDecl CaseList	                                            {printProductionRule(48);}
		 | CaseDecl	                                                        {printProductionRule(49);}
		 | DEFAULT COLON Statements	                                        {printProductionRule(50);}

CaseDecl : CASE NUM COLON Statements	                                    {printProductionRule(51);}


N : /* epsilon */															{$$ = new Exp(""); int addr = BUFF.emit("br label @"); $$->nextList = BUFF.makelist(addrPair(addr, FIRST));}											
;

M : /* epsilon */															{$$ = new Exp(""); $$->label = BUFF.genLabel();}											
;

M1 : /* epsilon */															{YYSTYPE e = yyvsp[0]; checkBool(e, e);}											
;

M2 : /* epsilon */															{enterScope("");}											
;

M3 : /* epsilon */															{exitScope();}											
;

M4 : /* epsilon */															{enterScope("WHILE");}											
;

%%


////////////TODO ASK DANIAL///////////////

int main()
{
	/* yydebug = 1; */
	enterScope("");
	addFunDefPrint("VOID", "print", std::vector<std::string>(), std::vector<std::string>{"STRING"} );
	addFunDefPrint("VOID", "printi", std::vector<std::string>(), std::vector<std::string>{"INT"} );
	BUFF.addBegCodetoBuffer();
	int parseRes = yyparse();
	checkForMain();
	exitScope();
	BUFF.printGlobalBuffer();
	BUFF.printCodeBuffer();
    return parseRes;
}

void yyerror(char const* s){
	errorSyn(yylineno);
	exit(0);
}
