parser.output
Rules useless in parser due to conflicts

   32 N: %empty


State 128 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: %empty
    3      | FuncDecl Funcs

    4 $@1: %empty

    5 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE $@1 Statements RBRACE

    6 RetType: Type
    7        | VOID

    8 Formals: %empty
    9        | FormalsList

   10 FormalsList: FormalDecl
   11            | FormalDecl COMMA FormalsList

   12 FormalDecl: Type ID

   13 Statements: Statment
   14           | Statements Statment

   15 $@2: %empty

   16 Statment: LBRACE $@2 Statements RBRACE
   17         | Type ID SC
   18         | Type ID ASSIGN Exp SC
   19         | ID ASSIGN Exp SC
   20         | Call SC
   21         | RETURN SC
   22         | RETURN Exp SC
   23         | IF LPAREN Exp M1 RPAREN M M2 Statment M3
   24         | IF LPAREN Exp M1 RPAREN M M2 Statment M3 N ELSE M M2 Statment M3
   25         | WHILE LPAREN Exp M1 RPAREN M4 Statment M3
   26         | BREAK SC
   27         | CONTINUE SC

   28 $@3: %empty

   29 $@4: %empty

   30 $@5: %empty

   31 Statment: SWITCH LPAREN Exp $@3 RPAREN LBRACE $@4 CaseList RBRACE $@5

   32 N: %empty

   33 M: %empty

   34 M1: %empty

   35 M2: %empty

   36 M3: %empty

   37 M4: %empty

   38 Call: ID LPAREN ExpList RPAREN
   39     | ID LPAREN RPAREN

   40 ExpList: Exp
   41        | Exp COMMA ExpList

   42 Type: INT
   43     | BYTE
   44     | BOOL

   45 Exp: LPAREN Exp RPAREN
   46    | Exp ADD Exp
   47    | Exp SUB Exp
   48    | Exp MULT Exp
   49    | Exp DIV Exp
   50    | ID
   51    | Call
   52    | NUM
   53    | NUM B
   54    | STRING
   55    | TRUE
   56    | FALSE
   57    | NOT Exp

   58 @6: %empty

   59 Exp: Exp AND @6 Exp

   60 @7: %empty

   61 Exp: Exp OR @7 Exp
   62    | Exp LT Exp
   63    | Exp LTE Exp
   64    | Exp GT Exp
   65    | Exp GTE Exp
   66    | Exp EQUAL Exp
   67    | Exp NEQUAL Exp

   68 CaseList: CaseDecl CaseList
   69         | CaseDecl
   70         | DEFAULT COLON Statements

   71 CaseDecl: CASE NUM COLON Statements


Terminals, with rules where they appear

$end (0) 0
error (256)
VOID (258) 7
INT (259) 42
BYTE (260) 43
B (261) 53
BOOL (262) 44
TRUE (263) 55
FALSE (264) 56
RETURN (265) 21 22
WHILE (266) 25
BREAK (267) 26
CONTINUE (268) 27
SWITCH (269) 31
DEFAULT (270) 70
COLON (271) 70 71
SC (272) 17 18 19 20 21 22 26 27
COMMA (273) 11 41
LBRACE (274) 5 16 31
RBRACE (275) 5 16 31
IF (276) 23 24
CASE (277) 71
HELSE (278)
NUM (279) 52 53 71
ID (280) 5 12 17 18 19 38 39 50
STRING (281) 54
ELSE (282) 24
ASSIGN (283) 18 19
OR (284) 61
AND (285) 59
EQUAL (286) 66
NEQUAL (287) 67
LT (288) 62
LTE (289) 63
GT (290) 64
GTE (291) 65
ADD (292) 46
SUB (293) 47
MULT (294) 48
DIV (295) 49
NOT (296) 57
LPAREN (297) 5 23 24 25 31 38 39 45
RPAREN (298) 5 23 24 25 31 38 39 45


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Program (45)
    on left: 1, on right: 0
Funcs (46)
    on left: 2 3, on right: 1 3
FuncDecl (47)
    on left: 5, on right: 3
$@1 (48)
    on left: 4, on right: 5
RetType (49)
    on left: 6 7, on right: 5
Formals (50)
    on left: 8 9, on right: 5
FormalsList (51)
    on left: 10 11, on right: 9 11
FormalDecl (52)
    on left: 12, on right: 10 11
Statements (53)
    on left: 13 14, on right: 5 14 16 70 71
Statment (54)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 31, on right: 13 14
    23 24 25
$@2 (55)
    on left: 15, on right: 16
$@3 (56)
    on left: 28, on right: 31
$@4 (57)
    on left: 29, on right: 31
$@5 (58)
    on left: 30, on right: 31
N (59)
    on left: 32, on right: 24
M (60)
    on left: 33, on right: 23 24
M1 (61)
    on left: 34, on right: 23 24 25
M2 (62)
    on left: 35, on right: 23 24
M3 (63)
    on left: 36, on right: 23 24 25
M4 (64)
    on left: 37, on right: 25
Call (65)
    on left: 38 39, on right: 20 51
ExpList (66)
    on left: 40 41, on right: 38 41
Type (67)
    on left: 42 43 44, on right: 6 12 17 18
Exp (68)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 59 61 62 63 64
    65 66 67, on right: 18 19 22 23 24 25 31 40 41 45 46 47 48 49 57
    59 61 62 63 64 65 66 67
@6 (69)
    on left: 58, on right: 59
@7 (70)
    on left: 60, on right: 61
CaseList (71)
    on left: 68 69 70, on right: 31 68
CaseDecl (72)
    on left: 71, on right: 68 69


State 0

    0 $accept: . Program $end

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 1

    7 RetType: VOID .

    $default  reduce using rule 7 (RetType)


State 2

   42 Type: INT .

    $default  reduce using rule 42 (Type)


State 3

   43 Type: BYTE .

    $default  reduce using rule 43 (Type)


State 4

   44 Type: BOOL .

    $default  reduce using rule 44 (Type)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 6

    1 Program: Funcs .

    $default  reduce using rule 1 (Program)


State 7

    3 Funcs: FuncDecl . Funcs

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


State 8

    5 FuncDecl: RetType . ID LPAREN Formals RPAREN LBRACE $@1 Statements RBRACE

    ID  shift, and go to state 12


State 9

    6 RetType: Type .

    $default  reduce using rule 6 (RetType)


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    3 Funcs: FuncDecl Funcs .

    $default  reduce using rule 3 (Funcs)


State 12

    5 FuncDecl: RetType ID . LPAREN Formals RPAREN LBRACE $@1 Statements RBRACE

    LPAREN  shift, and go to state 13


State 13

    5 FuncDecl: RetType ID LPAREN . Formals RPAREN LBRACE $@1 Statements RBRACE

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 8 (Formals)

    Formals      go to state 14
    FormalsList  go to state 15
    FormalDecl   go to state 16
    Type         go to state 17


State 14

    5 FuncDecl: RetType ID LPAREN Formals . RPAREN LBRACE $@1 Statements RBRACE

    RPAREN  shift, and go to state 18


State 15

    9 Formals: FormalsList .

    $default  reduce using rule 9 (Formals)


State 16

   10 FormalsList: FormalDecl .
   11            | FormalDecl . COMMA FormalsList

    COMMA  shift, and go to state 19

    $default  reduce using rule 10 (FormalsList)


State 17

   12 FormalDecl: Type . ID

    ID  shift, and go to state 20


State 18

    5 FuncDecl: RetType ID LPAREN Formals RPAREN . LBRACE $@1 Statements RBRACE

    LBRACE  shift, and go to state 21


State 19

   11 FormalsList: FormalDecl COMMA . FormalsList

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    FormalsList  go to state 22
    FormalDecl   go to state 16
    Type         go to state 17


State 20

   12 FormalDecl: Type ID .

    $default  reduce using rule 12 (FormalDecl)


State 21

    5 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE . $@1 Statements RBRACE

    $default  reduce using rule 4 ($@1)

    $@1  go to state 23


State 22

   11 FormalsList: FormalDecl COMMA FormalsList .

    $default  reduce using rule 11 (FormalsList)


State 23

    5 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE $@1 . Statements RBRACE

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    SWITCH    shift, and go to state 28
    LBRACE    shift, and go to state 29
    IF        shift, and go to state 30
    ID        shift, and go to state 31

    Statements  go to state 32
    Statment    go to state 33
    Call        go to state 34
    Type        go to state 35


State 24

   21 Statment: RETURN . SC
   22         | RETURN . Exp SC

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    SC      shift, and go to state 38
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 45


State 25

   25 Statment: WHILE . LPAREN Exp M1 RPAREN M4 Statment M3

    LPAREN  shift, and go to state 46


State 26

   26 Statment: BREAK . SC

    SC  shift, and go to state 47


State 27

   27 Statment: CONTINUE . SC

    SC  shift, and go to state 48


State 28

   31 Statment: SWITCH . LPAREN Exp $@3 RPAREN LBRACE $@4 CaseList RBRACE $@5

    LPAREN  shift, and go to state 49


State 29

   16 Statment: LBRACE . $@2 Statements RBRACE

    $default  reduce using rule 15 ($@2)

    $@2  go to state 50


State 30

   23 Statment: IF . LPAREN Exp M1 RPAREN M M2 Statment M3
   24         | IF . LPAREN Exp M1 RPAREN M M2 Statment M3 N ELSE M M2 Statment M3

    LPAREN  shift, and go to state 51


State 31

   19 Statment: ID . ASSIGN Exp SC
   38 Call: ID . LPAREN ExpList RPAREN
   39     | ID . LPAREN RPAREN

    ASSIGN  shift, and go to state 52
    LPAREN  shift, and go to state 53


State 32

    5 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE $@1 Statements . RBRACE
   14 Statements: Statements . Statment

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    SWITCH    shift, and go to state 28
    LBRACE    shift, and go to state 29
    RBRACE    shift, and go to state 54
    IF        shift, and go to state 30
    ID        shift, and go to state 31

    Statment  go to state 55
    Call      go to state 34
    Type      go to state 35


State 33

   13 Statements: Statment .

    $default  reduce using rule 13 (Statements)


State 34

   20 Statment: Call . SC

    SC  shift, and go to state 56


State 35

   17 Statment: Type . ID SC
   18         | Type . ID ASSIGN Exp SC

    ID  shift, and go to state 57


State 36

   55 Exp: TRUE .

    $default  reduce using rule 55 (Exp)


State 37

   56 Exp: FALSE .

    $default  reduce using rule 56 (Exp)


State 38

   21 Statment: RETURN SC .

    $default  reduce using rule 21 (Statment)


State 39

   52 Exp: NUM .
   53    | NUM . B

    B  shift, and go to state 58

    $default  reduce using rule 52 (Exp)


State 40

   38 Call: ID . LPAREN ExpList RPAREN
   39     | ID . LPAREN RPAREN
   50 Exp: ID .

    LPAREN  shift, and go to state 53

    $default  reduce using rule 50 (Exp)


State 41

   54 Exp: STRING .

    $default  reduce using rule 54 (Exp)


State 42

   57 Exp: NOT . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 59


State 43

   45 Exp: LPAREN . Exp RPAREN

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 60


State 44

   51 Exp: Call .

    $default  reduce using rule 51 (Exp)


State 45

   22 Statment: RETURN Exp . SC
   46 Exp: Exp . ADD Exp
   47    | Exp . SUB Exp
   48    | Exp . MULT Exp
   49    | Exp . DIV Exp
   59    | Exp . AND @6 Exp
   61    | Exp . OR @7 Exp
   62    | Exp . LT Exp
   63    | Exp . LTE Exp
   64    | Exp . GT Exp
   65    | Exp . GTE Exp
   66    | Exp . EQUAL Exp
   67    | Exp . NEQUAL Exp

    SC      shift, and go to state 61
    OR      shift, and go to state 62
    AND     shift, and go to state 63
    EQUAL   shift, and go to state 64
    NEQUAL  shift, and go to state 65
    LT      shift, and go to state 66
    LTE     shift, and go to state 67
    GT      shift, and go to state 68
    GTE     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MULT    shift, and go to state 72
    DIV     shift, and go to state 73


State 46

   25 Statment: WHILE LPAREN . Exp M1 RPAREN M4 Statment M3

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 74


State 47

   26 Statment: BREAK SC .

    $default  reduce using rule 26 (Statment)


State 48

   27 Statment: CONTINUE SC .

    $default  reduce using rule 27 (Statment)


State 49

   31 Statment: SWITCH LPAREN . Exp $@3 RPAREN LBRACE $@4 CaseList RBRACE $@5

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 75


State 50

   16 Statment: LBRACE $@2 . Statements RBRACE

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    SWITCH    shift, and go to state 28
    LBRACE    shift, and go to state 29
    IF        shift, and go to state 30
    ID        shift, and go to state 31

    Statements  go to state 76
    Statment    go to state 33
    Call        go to state 34
    Type        go to state 35


State 51

   23 Statment: IF LPAREN . Exp M1 RPAREN M M2 Statment M3
   24         | IF LPAREN . Exp M1 RPAREN M M2 Statment M3 N ELSE M M2 Statment M3

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 77


State 52

   19 Statment: ID ASSIGN . Exp SC

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 78


State 53

   38 Call: ID LPAREN . ExpList RPAREN
   39     | ID LPAREN . RPAREN

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43
    RPAREN  shift, and go to state 79

    Call     go to state 44
    ExpList  go to state 80
    Exp      go to state 81


State 54

    5 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE $@1 Statements RBRACE .

    $default  reduce using rule 5 (FuncDecl)


State 55

   14 Statements: Statements Statment .

    $default  reduce using rule 14 (Statements)


State 56

   20 Statment: Call SC .

    $default  reduce using rule 20 (Statment)


State 57

   17 Statment: Type ID . SC
   18         | Type ID . ASSIGN Exp SC

    SC      shift, and go to state 82
    ASSIGN  shift, and go to state 83


State 58

   53 Exp: NUM B .

    $default  reduce using rule 53 (Exp)


State 59

   46 Exp: Exp . ADD Exp
   47    | Exp . SUB Exp
   48    | Exp . MULT Exp
   49    | Exp . DIV Exp
   57    | NOT Exp .
   59    | Exp . AND @6 Exp
   61    | Exp . OR @7 Exp
   62    | Exp . LT Exp
   63    | Exp . LTE Exp
   64    | Exp . GT Exp
   65    | Exp . GTE Exp
   66    | Exp . EQUAL Exp
   67    | Exp . NEQUAL Exp

    $default  reduce using rule 57 (Exp)


State 60

   45 Exp: LPAREN Exp . RPAREN
   46    | Exp . ADD Exp
   47    | Exp . SUB Exp
   48    | Exp . MULT Exp
   49    | Exp . DIV Exp
   59    | Exp . AND @6 Exp
   61    | Exp . OR @7 Exp
   62    | Exp . LT Exp
   63    | Exp . LTE Exp
   64    | Exp . GT Exp
   65    | Exp . GTE Exp
   66    | Exp . EQUAL Exp
   67    | Exp . NEQUAL Exp

    OR      shift, and go to state 62
    AND     shift, and go to state 63
    EQUAL   shift, and go to state 64
    NEQUAL  shift, and go to state 65
    LT      shift, and go to state 66
    LTE     shift, and go to state 67
    GT      shift, and go to state 68
    GTE     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MULT    shift, and go to state 72
    DIV     shift, and go to state 73
    RPAREN  shift, and go to state 84


State 61

   22 Statment: RETURN Exp SC .

    $default  reduce using rule 22 (Statment)


State 62

   61 Exp: Exp OR . @7 Exp

    $default  reduce using rule 60 (@7)

    @7  go to state 85


State 63

   59 Exp: Exp AND . @6 Exp

    $default  reduce using rule 58 (@6)

    @6  go to state 86


State 64

   66 Exp: Exp EQUAL . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 87


State 65

   67 Exp: Exp NEQUAL . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 88


State 66

   62 Exp: Exp LT . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 89


State 67

   63 Exp: Exp LTE . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 90


State 68

   64 Exp: Exp GT . Exp

    TRUE    shift, and go to state 36
    FALSE   shift, and go to state 37
    NUM     shift, and go to state 39
    ID      shift, and go to state 40
    STRING  shift, and go to state 41
    NOT     shift, and go to state 42
    LPAREN  shift, and go to state 43

    Call  go to state 44
    Exp   go to state 91


State 69

   65 Exp: Exp GTE . Exp
